feat: added producer creation
