# src/domain/request/ProducerCreateRequest.ts
@@ -1,0 +1,7 @@
+import { FarmRequest } from './FarmRequest';
+
+export interface ProducerCreateRequest {
+	name: string;
+	taxDocument: string;
+	farmData: FarmRequest;
+}
